--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -10,7 +10,7 @@
             d="M 0 100 Q 50 200 100 250 Q 250 400 350 300 C 400 250 550 150 650 300 Q 750 450 800 400" stroke="pink"
             stroke-width="3" fill="transparent" />
     </svg>
-    <div class="card__content">
+    <div class="card__content" >
         <h1 class="card__title" [routerLink]="['/clanak',id]">{{title}}</h1>
         <p *ngIf="viewMore" style="margin-bottom: 100px;">{{text}}</p>
         <p *ngIf="!viewMore" style="margin-bottom: 100px;">{{description}}</p>
@@ -19,8 +19,8 @@
     <footer class="card__footer">
         <time class="card__time">{{date | date}}</time>
         <button class="card__button" (click)="showHide()">
-            <p *ngIf="viewMore"> Pročitaj manje </p>
-            <p *ngIf="!viewMore"> Pročitaj više </p>
+            <p *ngIf="viewMore"> Read less </p>
+            <p *ngIf="!viewMore"> Read more </p>
             <div *ngIf="!viewMore">
                 <img class="card_read_more-icon1" src="../../assets/picture/scroll-arrow-to-down.svg" alt="arrow-down">
                 <img class="card_read_more-icon2" src="../../assets/picture/scroll-arrow-to-down.svg" alt="arrow-down">
@@ -32,6 +32,4 @@
             </div>
         </button>
     </footer>
-
-
 </article>
