--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,16 +1,16 @@
-<div class="articles-container">
+<main class="articles-container">
 
     <nav class="meni" [ngStyle]="{ 'background-image': 'url(' + pictureUrl + ')'}">
-        <a [routerLink]="['/clanci','sve']" routerLinkActive="active">#Sve </a>
-        <a [routerLink]="['/clanci','kultura']" routerLinkActive="active">#Култура </a>
-        <a [routerLink]="['/clanci','drustvo']" routerLinkActive="active">#Друштво</a>
-        <a [routerLink]="['/clanci','svet']" routerLinkActive="active">#Свијет</a>
+        <a [routerLink]="['/clanci','top-news']" routerLinkActive="active">#Top news </a>
+        <a [routerLink]="['/clanci','bitcoin']" routerLinkActive="active">#Bitcoin </a>
+        <a [routerLink]="['/clanci','wall-street']" routerLinkActive="active">#Wall Street</a>
+        <a [routerLink]="['/clanci','apple']" routerLinkActive="active">#Apple</a>
         <app-search (inputValueChanged)="getSearchValue($event)"></app-search>
     </nav>
     <p class="message" *ngIf="!existArticle">{{message}}</p>
-    <!-- <img class="cover" src={{pictureUrl}}   alt=""> --> -->
+    <!-- <img class="cover" src={{pictureUrl}}   alt=""> --> 
     <app-article class="article" *ngFor="let article of articleList" id={{article.id}} title={{article.title}}
         imageUrl={{article.imageUrl}} description={{article.description}} text={{article.text}} date={{article.date}}
-        category={{article.category}} (clickChange)=display($event)>
+        category={{article.category}}  (clickChange)=display($event)>
     </app-article>
-</div>
+</main>
